<resources>
    <string name="app_name">Conversor de Divisa</string>

    <string name="hintDivisa1">Introduce el valor a convertir</string>
    <string name="textConvertir">Convertir</string>
    <string name="textLimpiar">Limpiar</string>
    <string name="textEditarTasa">Editar tasas manualmente</string>
    <string name="textSincronizarTasa">Sincronizar tasa online</string>

    <string name="tituloEdicion">Edicion de Euros a otra divisa</string>
    <string name="textGuardar">Guardar</string>
    <string name="textVolver">Volver</string>

    <string name="textSaver">Introduce el valor de conversion de euros a la divisa que has elegido</string>
</resources>
