<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spDivisa1"
        android:layout_width="326dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtDivisa1"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hintDivisa1"
        android:inputType="number"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spDivisa1" />

    <Spinner
        android:id="@+id/spDivisa2"
        android:layout_width="326dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDivisa1" />

    <TextView
        android:id="@+id/txtDivisa2"
        android:layout_width="296dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spDivisa2" />

    <Button
        android:id="@+id/btConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:onClick="conversion"
        android:text="@string/textConvertir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDivisa2" />

    <Button
        android:id="@+id/btLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:onClick="limpiarFormulario"
        android:text="@string/textLimpiar"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/btConvertir"
        app:layout_constraintTop_toBottomOf="@+id/txtDivisa2" />

    <ImageButton
        android:id="@+id/ibtSincronizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/textSincronizarTasa"
        android:onClick="actualizarTasas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btConvertir"
        app:srcCompat="@mipmap/ic_sync" />

    <Button
        android:id="@+id/btEditarTasa"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="80dp"
        android:onClick="goToEdTasas"
        android:text="@string/textEditarTasa"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ibtSincronizar"
        app:layout_constraintTop_toBottomOf="@+id/btLimpiar" />

</android.support.constraint.ConstraintLayout>